# cmake-runtime

./: .gitignore  .prettierignore  CMakeLists.txt  README.md  build.mjs  index.js  package.json  publish.mjs
.github/workflows/: integrate.yml  prebuild.yml  publish.yml
lib/: spawn.js
npm/darwin-arm64/: package.json
npm/darwin-universal/: package.json
npm/darwin-x64/: NOTICE  index.js  package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-arm64/: index.js  package.json
npm/win32-x64/: package.json
npm/win32-x64/share/: .npmignore
